refactor: complete migration from python script to java-fx standalone application